--- a/res/tableau.css
+++ b/res/tableau.css
@@ -10,8 +10,13 @@
   {
   font-size:1em;
   border:1px solid #98bf21;
-  border-style:none dashed solid none;
+  /*border-style:none dashed solid none;*/
   padding:3px 7px 2px 7px;
+  }
+
+.tableau .in-stratum
+  {
+  border-style:none dashed solid none;
   }
 
 .tableau th, .tableau th.row-title td
